// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render date input when readOnly is true 1`] = `
<div>
   
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    2017-03-07 16:20:00
  </span>
   
</div>
`;

exports[`render date input when readOnly is true showing - for empty value 1`] = `
<div>
   
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    -
  </span>
   
</div>
`;

exports[`render date input when readOnly is true showing empty value 1`] = `
<div>
   
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    
  </span>
   
</div>
`;

exports[`render date time input 1`] = `
<div>
   
  <div
    class="MuiFormControl-root"
  >
    <div
      class="MuiInput-root MuiInput-formControl MuiInput-underline WithUtils-DateTextField--input-2"
    >
      <input
        aria-invalid="false"
        class="MuiInput-input"
        placeholder="Test DateTime Input"
        type="text"
        value="2016-03-07 16:20:00"
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root"
            >
               
              event
               
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    
  </div>
   
</div>
`;

exports[`render null date time input 1`] = `
<div>
   
  <div
    class="MuiFormControl-root"
  >
    <div
      class="MuiInput-root MuiInput-formControl MuiInput-underline WithUtils-DateTextField--input-66"
    >
      <input
        aria-invalid="false"
        class="MuiInput-input"
        placeholder="Test DateTime Input"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root"
            >
               
              event
               
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    
  </div>
   
</div>
`;
